tests/health/gold/sdk/tests__pi__spi.toit.gold
tests/pi/spi.toit:52:16: error: Can't instantiate interface 'Device'
  device := spi.Device --path="/dev/spidev0.0" --frequency=FREQUENCY
               ^~~~~~~
